[tool.poetry]
name = "didistro-tools"
version = "0.1.0"
description = ""
authors = ["YD"]
readme = "README.md"
packages = [{include = "didistro_tools", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pathlib = "^1.0.1"
black = "^24.4.2"
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
didistro-tools = "didistro_tools.didistro_tools:main"
